# ratchets

./: .gitignore  .index  011-template-guide.md  018-template-agent-diary.md  019-template-human-prefs.md  AGENTS.md  ARCHITECTURE.md  Cargo.toml  DESIGN.md  PERFORMANCE.md  README.md  RUST_STYLE_GUIDE.md  TESTING.md  deny.toml  install.sh  justfile  justfile-rustbucket  ratchet-counts.toml  ratchets.toml  rust-bucket.toml  rustfmt.toml
.beads/: config.yaml  issues.jsonl  last-touched
.claude/agents/: coding.md  coordinator.md  judge.md  reflection.md  tidy.md
.config/: nextest.toml
.devcontainer/: Dockerfile  devcontainer.json
benches/: performance.rs
builtin-ratchets/regex/: no-fixme-comments.toml  no-todo-comments.toml
builtin-ratchets/sets/: common-starter.toml
docs/: supporting-sculptor.md  upgrade-v1-to-v2.md
src/: cli.rs  config.rs  engine.rs  error.rs  lib.rs  main.rs  output.rs  rules.rs  types.rs
src/cli/: args.rs  bump.rs  check.rs  common.rs  git_diff.rs  init.rs  list.rs  merge_driver.rs  tighten.rs  upgrade_notice.rs
src/config/: counts.rs  ratchet_toml.rs  sets.rs
src/engine/: aggregator.rs  executor.rs  file_walker.rs
src/output/: human.rs  jsonl.rs  rule_status.rs
src/rules/: builtin.rs  regex_rule.rs  registry.rs  rule.rs
tests/: ast_integration_tests.rs  ast_test_helpers.rs  check_command_tests.rs  cli_integration_tests.rs  common.rs  config_tests.rs  e2e_integration_tests.rs  engine_integration_tests.rs  file_walker_tests.rs  foundation_tests.rs  python_ast_rule_validation_tests.rs  regex_rules_tests.rs  scalability_tests.rs  sculptor_common.rs  sculptor_group_c_tests.rs  sculptor_group_d_tests.rs
(+90 files in other folders)
