[package]
name = "ratchets"
version = "0.2.4"
edition = "2024"
description = "Progressive lint enforcement tool with budgeted violations that can only decrease over time"
license-file = "LICENSE"
repository = "https://github.com/imbue-ai/ratchets"
homepage = "https://github.com/imbue-ai/ratchets"
readme = "README.md"
keywords = ["lint", "ratchets", "static-analysis", "code-quality", "tree-sitter"]
categories = ["development-tools", "command-line-utilities"]

[features]
default = ["lang-rust", "lang-typescript", "lang-javascript", "lang-python", "lang-go"]
lang-rust = ["dep:tree-sitter-rust"]
lang-typescript = ["dep:tree-sitter-typescript"]
lang-javascript = ["dep:tree-sitter-javascript"]
lang-python = ["dep:tree-sitter-python"]
lang-go = ["dep:tree-sitter-go"]

[dependencies]
clap = { version = "4", features = ["derive"] }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
globset = "0.4"
ignore = "0.4"
regex = "1.10"
tree-sitter = "0.22"
tree-sitter-rust = { version = "0.21", optional = true }
tree-sitter-typescript = { version = "0.21", optional = true }
tree-sitter-javascript = { version = "0.21", optional = true }
tree-sitter-python = { version = "0.21", optional = true }
tree-sitter-go = { version = "0.21", optional = true }
rayon = "1.10"
termcolor = "1.4"

[dev-dependencies]
serde_json = "1.0"
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
serial_test = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "performance"
harness = false
